# ABCP

./: .env.example  .gitattributes  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  commitlint.config.ts  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.base.json  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  provenance.yml  release-please.yml  scorecard.yml  storybook.yml
ADR/: 0001-decisions.md
apps/control-plane/: package.json  tsconfig.json  vitest.config.ts
apps/control-plane/src/: index.ts  server.ts
apps/control-plane/src/__tests__/: server.test.ts
apps/control-plane/src/api/: http.ts  schemas.ts
apps/control-plane/src/config/: index.ts
apps/control-plane/src/drivers/: atlas.ts  base.ts  bedrock.ts  gemini.ts  index.ts
apps/ui/: next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/ui/.storybook/: main.ts  preview.ts
apps/ui/src/app/: globals.css  page.tsx  (+2 more)
docs/: docusaurus.config.ts  package.json
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  routes.js  routesChunkNames.json
docs/docs/: intro.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
eval/browsergym/: README.md  eval_runner.py  pyproject.toml
eval/browsergym/tasks/: sample_login.json
eval/webarena/: README.md  eval_runner.py  pyproject.toml
eval/webarena/tasks/: sample_suite.json
(+21 files in other folders)
