[project]
name = "abcp-browsergym-evals"
version = "0.1.0"
description = "BrowserGym evaluation harness for Agentic Browser Control Plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "browsergym>=0.4.0",
  "pandas>=2.2.0",
  "typer>=0.12.5",
  "httpx>=0.27.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0"
]
