[project]
name = "abcp-webarena-evals"
version = "0.1.0"
description = "WebArena evaluation harness for Agentic Browser Control Plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "webarena-client>=0.2.0",
  "typer>=0.12.5",
  "httpx>=0.27.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0"
]
